--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mdb-react-ui-kit": "^4.1.0",
     "mongoose": "^8.9.5",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.8",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
