--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
+    "luxon": "^3.5.0",
     "mdb-react-ui-kit": "^9.0.0",
     "mongoose": "^8.9.5",
     "react": "^19.0.0",
