--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "request-ip": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.10",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ajv": "^7.2.4"
   }
 }
